--- a/example/snake/docroot/main.css
+++ b/example/snake/docroot/main.css
@@ -1,3 +1,11 @@
+html,
+body {
+	background-color: black;
+	margin: 0;
+	padding: 0;
+}
+
 #canvas {
-	border: solid thin black;
+	display: block;
+	margin: auto;
 }
