--- a/example/snake/docroot/main.css
+++ b/example/snake/docroot/main.css
@@ -1,11 +1,31 @@
 html,
 body {
+	font-family: monospace;
 	background-color: black;
-	margin: 0;
+	color: white;
 	padding: 0;
+	margin: 0;
+}
+
+body {
+	display: flex;
+	flex-flow: column nowrap;
+	box-sizing: border-box;
+	height: 100vh;
+	padding: 1em;
+}
+
+main {
+	flex-grow: 1;
 }
 
 #canvas {
 	display: block;
 	margin: auto;
+}
+
+footer {
+	margin-top: 0.25em;
+	display: flex;
+	flex-direction: row-reverse;
 }
